--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ JWT_SECRET=supersecretkey
 NODE_ENV=development
 
 SMTP_HOST=smtp.gmail.com
-SMTP_USER=
-SMTP_PASS=
+SMTP_USER=php2.dbvertex@gmail.com
+SMTP_PASS=grrp vrtz rkgt cyjv
