--- a/.env
+++ b/.env
@@ -1,15 +1,16 @@
 PORT=4000
 # MONGODB_URI=mongodb://localhost:27017/coden
-MONGODB_URI=mongodb+srv://nodedb9_db_user:LEF.fZVPpGxN%21s9@cluster0.lwcalpv.mongodb.net/codeN?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://nodedb9_db_user:Codon771650NodeDB@cluster0.lwcalpv.mongodb.net/codeN?retryWrites=true&w=majority&appName=Cluster0
 
 BASE_URL=https://coden.graphicsvolume.com
 
 JWT_SECRET=supersecret
 JWT_REFRESH_SECRET=superrefreshsecret
 JWT_ADMIN_SECRET=adminsuper_secret_key_12345
-GOOGLE_CLIENT_ID=46372698062-1sl1mfbtbn85v7o2kr983kqheg2tqrv7.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-
+# GOOGLE_CLIENT_ID=46372698062-1sl1mfbtbn85v7o2kr983kqheg2tqrv7.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET=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
+GOOGLE_CLIENT_ID=1034135324422-t7cu331g5cabni0lit8h1sf5dgkav9se.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 # NODE_ENV=development
 
 SMTP_HOST=smtp.gmail.com
